--- a/provision/config/nginx.conf
+++ b/provision/config/nginx.conf
@@ -7,7 +7,7 @@ server {
 
 
     location / {
-        proxy_pass "http://{{green}}:3000/";
+        proxy_pass "http://green.lostcities.app:3000/";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -22,7 +22,7 @@ server {
     }
 
     location /api/accounts {
-        proxy_pass "http://{{blue}}:8080/api/accounts";
+        proxy_pass "http://blue.lostcities.app:8080/api/accounts";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -37,7 +37,7 @@ server {
     }
 
     location /api/matches {
-        proxy_pass "http://{{red}}:8080/api/matches";
+        proxy_pass "http://red.lostcities.app:8080/api/matches";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -52,7 +52,7 @@ server {
     }
 
     location /api/gamestate {
-        proxy_pass "http://{{yellow}}:8080/api/gamestate";
+        proxy_pass "http://yellow.lostcities.app:8080/api/gamestate";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -67,7 +67,7 @@ server {
     }
 
     location /api/player-events {
-        proxy_pass "http://{{green}}:8080/api/player-events";
+        proxy_pass "http://green.lostcities.app:8080/api/player-events";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
