--- a/provision/nomad/nomad-client.yml
+++ b/provision/nomad/nomad-client.yml
@@ -13,6 +13,8 @@
       ansible.builtin.shell: |
         curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
         apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        mkdir -p /var/run/docker.sock
+        chown nomad /var/run/docker.sock
     - name: Install Apt Dependencies
       ansible.builtin.apt:
         name: nomad
