--- a/provision/base-configure.yml
+++ b/provision/base-configure.yml
@@ -23,4 +23,16 @@
         dest: /usr/share/.gcreds
         group: docker
         owner: nomad
-
+    - name:
+      ansible.builtin.shell: |
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
+        apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+    - name: Install Apt Dependencies
+      ansible.builtin.apt:
+        update_cache: true
+    - name: Adding nomad working directory
+      ansible.builtin.file:
+        path: /var/opt/loki
+        state: directory
+        owner: nomad
+        mode: '0775'
