Improving the consul and nomad scripts. Doing more work with DNS.

--- a/provision/base-configure.yml
+++ b/provision/base-configure.yml
@@ -1,7 +1,7 @@
 ---
 - name: Setting up application service
   user: root
-  hosts: red, blue, green
+  hosts: red, blue, green, yellow
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
@@ -17,22 +17,10 @@
     - name: Fix dpkg
       ansible.builtin.shell:
         cmd: dpkg --configure -a
-    - name: Adding Gcreds
-      ansible.builtin.copy:
-        src: ~/gcreds.json
-        dest: /usr/share/.gcreds
-        group: docker
-        owner: nomad
     - name:
       ansible.builtin.shell: |
         curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
         apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-    - name: Install Apt Dependencies
-      ansible.builtin.apt:
-        update_cache: true
-    - name: Adding nomad working directory
-      ansible.builtin.file:
-        path: /var/opt/loki
-        state: directory
-        owner: nomad
-        mode: '0775'
+    #- name: Update Apt
+    #  ansible.builtin.apt:
+    #    update_cache: true
