--- a/provision/consul/consul-client.yml
+++ b/provision/consul/consul-client.yml
@@ -1,26 +1,28 @@
 ---
 - name: Setting up consul
   user: root
-  hosts: red, blue, green
+  hosts: red, blue, green, yellow
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
-    - name: Stop nomad
-      ansible.builtin.systemd:
-        state: stopped
-        name: nomad
-    - name: Stop consul
-      ansible.builtin.systemd:
-        state: stopped
-        name: consul
-    #- name: Remove raft
-    #  ansible.builtin.file:
-    #    path: "/opt/consul/raft/raft.db"
-    #    state: absent
     - name: Adding consul service
       ansible.builtin.copy:
         src: ./consul.service
         dest: /etc/systemd/system/consul.service
+
+    - name: Stop consul
+      block:
+        - name: Stop
+          ansible.builtin.systemd:
+            state: stopped
+            name: consul
+      rescue:
+        - name: facts
+          service_facts:
+    #- name: Remove raft
+    #  ansible.builtin.file:
+    #    path: "/opt/consul/raft/raft.db"
+    #    state: absent
     - name: Adding consul config
       ansible.builtin.template:
         src: ./consul.hcl
