--- a/provision/docker/docker-playbook.yml
+++ b/provision/docker/docker-playbook.yml
@@ -1,7 +1,7 @@
 ---
 - name: Setting up application service
   user: root
-  hosts: red, blue, green
+  hosts: red, blue, green, yellow
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
