--- a/provision/nomad/nomad-client.yml
+++ b/provision/nomad/nomad-client.yml
@@ -68,5 +68,5 @@
         proto: tcp
     - name: Start nomad
       ansible.builtin.systemd:
-        state: started
+        state: restarted
         name: nomad
