--- a/ansible/nomad/nomad-stop.yml
+++ b/ansible/nomad/nomad-stop.yml
@@ -1,11 +1,11 @@
 ---
 - name: Setting up nomad
   user: root
-  hosts: red, blue, green, yellow
+  hosts: red, blue, green, yellow, white
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
-    - name: Start nomad
+    - name: Stop nomad
       ansible.builtin.systemd:
         state: stopped
         name: nomad
