--- a/ansible/systemd-resolved/systemd-resolved-playbook.yml
+++ b/ansible/systemd-resolved/systemd-resolved-playbook.yml
@@ -1,7 +1,7 @@
 ---
 - name: Join Nomad from local
   user: root
-  hosts: red, blue, green, yellow
+  hosts: red, blue, green, yellow, white
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
